--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
 
 <h1 id="name and favorite color">
-Nicholas Smith's favotite color is blue
+Nicholas Smith's favorite color is blue
 
 </h1>
 
