added garrett's title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title> I made this! </title>
+    <title> No Man's Page (thx Garrett) </title>
   </head>
   <body>
 
