--- a/index.html
+++ b/index.html
@@ -2,27 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title> No Man's Page (thx Garrett) </title>
+    <title> Game! </title>
   </head>
   <body>
 
-<h1 id="No Man's Sky Photos ">
-No Man's Sky Images
-</h1>
 
-
-<img src="ship1.jpg" width=300>
-<hr>
-<img src="ship2.jpg" width=300>
-<hr>
-<img src="ship3.jpg" width=300 >
-<br>
-  <a href="https://www.google.com" target="_blank">
-To google <br>
-  </a>
-
-<br>
-  &copy;
 
 
   </body>
