coin test babbbbyy

--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link href="style.css" rel="stylesheet" type="text/css" />
     <title> Game! </title>
   </head>
   <body>
-
+    <script src="script.js"></script>
+    <canvas width=600 height=600 id="myCanvas"></canvas>
 
 
 
