working coin code

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8">
     <link href="style.css" rel="stylesheet" type="text/css" />
+
     <title> Game! </title>
   </head>
   <body>
-    <script src="script.js"></script>
+
     <canvas width=600 height=600 id="myCanvas"></canvas>
+    <script src=".\script.js"></script>
 
 
 
