updated readme and added score

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
 
     <canvas width=600 height=600 id="myCanvas"></canvas>
+    <p id="demo"></p>
     <script src=".\script.js"></script>
 
 
