--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 
-    <canvas width=600 height=600 id="myCanvas"></canvas>
+    <canvas id="myCanvas"></canvas>
     <p id="demo"></p>
     <script src=".\script.js"></script>
 
